[package]
name = "scgi"
version = "0.3.1"
authors = ["ArtemGr <artemciy@gmail.com>"]

description = "Simple SCGI parser"
documentation = "http://www.rust-ci.org/ArtemGr/rust-scgi/doc/scgi/"
repository = "https://github.com/ArtemGr/rust-scgi"
readme = "README.md"
keywords = ["web", "server"]
license = "Apache-2.0"

[lib]
name = "scgi"
path = "src/scgi.rs"
doctest = false

[dependencies]
bufstream = "0.1"
